--- a/p8105_hw5_mjn2142.md
+++ b/p8105_hw5_mjn2142.md
@@ -5,6 +5,31 @@ Matthew Neky
 
 ### Problem 2
 
+## Dataframe with All File Names
+
 ``` r
 long_study_data = as_tibble(list.files("./data"))
+```
+
+## Iterating over File Names
+
+``` r
+long_study_output =
+  map(.x = long_study_data, ~ read_csv(.x))
+```
+
+    ## Rows: 20 Columns: 8
+
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
+
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+nest_long_study_data = 
+  merge(long_study_data, long_study_output) %>% 
+  nest(data = value.week_1:value.week_8)
 ```
