Did more tidying/fixed error with knitting

--- a/p8105_hw5_mjn2142.md
+++ b/p8105_hw5_mjn2142.md
@@ -29,7 +29,41 @@ long_study_output =
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
 ``` r
-nest_long_study_data = 
-  merge(long_study_data, long_study_output) %>% 
-  nest(data = value.week_1:value.week_8)
+nest_long_study_data = long_study_output %>% 
+  data.frame %>% 
+  mutate(
+    long_study_data
+  ) %>% 
+  rename(
+    week_1 = value.week_1,
+    week_2 = value.week_2,
+    week_3 = value.week_3,
+    week_4 = value.week_4,
+    week_5 = value.week_5,
+    week_6 = value.week_6,
+    week_7 = value.week_7,
+    week_8 = value.week_8
+  ) %>% 
+  nest(data = week_1:week_8)
 ```
+
+## Tidying Data
+
+``` r
+tidied_nest_data = nest_long_study_data %>% 
+  separate(
+    col = value,
+    into = c("group", "id"),
+    sep = "_"
+  ) %>% 
+  mutate(
+  group = recode(
+    group,
+    "con" = "control",
+    "exp" = "experimental"
+  ),
+   id = substr(id, start = 1, stop = 2)
+  )
+```
+
+## Spaghetti Plot
