--- a/p8105_hw5_mjn2142.Rmd
+++ b/p8105_hw5_mjn2142.Rmd
@@ -36,9 +36,22 @@ long_study_data = as_tibble(list.files("./data"))
 long_study_output =
   map(.x = long_study_data, ~ read_csv(.x))
 
-nest_long_study_data = 
-  merge(long_study_data, long_study_output) %>% 
-  nest(data = value.week_1:value.week_8)
+nest_long_study_data = long_study_output %>% 
+  data.frame %>% 
+  mutate(
+    long_study_data
+  ) %>% 
+  rename(
+    week_1 = value.week_1,
+    week_2 = value.week_2,
+    week_3 = value.week_3,
+    week_4 = value.week_4,
+    week_5 = value.week_5,
+    week_6 = value.week_6,
+    week_7 = value.week_7,
+    week_8 = value.week_8
+  ) %>% 
+  nest(data = week_1:week_8)
 ```
 
 ## Tidying Data
@@ -58,6 +71,11 @@ tidied_nest_data = nest_long_study_data %>%
   ),
    id = substr(id, start = 1, stop = 2)
   )
-)
+```
+
+## Spaghetti Plot
+
+```{r}
+
 ```
 
