--- a/p8105_hw5_mjn2142.md
+++ b/p8105_hw5_mjn2142.md
@@ -67,3 +67,29 @@ tidied_nest_data = nest_long_study_data %>%
 ```
 
 ## Spaghetti Plot
+
+``` r
+spaghetti_plot = tidied_nest_data %>% 
+  unnest(data) %>% 
+  pivot_longer(week_1:week_8, names_to = "week", values_to = "value") %>% 
+  ggplot(aes(x = week, y = value, group = id, color = id)) +
+  geom_line() +
+  facet_grid(. ~ group) +
+  labs(
+    title = "Values for Experimental and Control Groups over Time",
+    x = "Week",
+    y = "Value"
+  )
+
+ggsave("spaghetti_plot.png")
+```
+
+    ## Saving 6 x 3.6 in image
+
+``` r
+knitr::include_graphics("spaghetti_plot.png")
+```
+
+<img src="spaghetti_plot.png" width="90%" />
+
+### Problem 3
