--- a/p8105_hw5_mjn2142.Rmd
+++ b/p8105_hw5_mjn2142.Rmd
@@ -79,6 +79,19 @@ tidied_nest_data = nest_long_study_data %>%
 spaghetti_plot = tidied_nest_data %>% 
   unnest(data) %>% 
   pivot_longer(week_1:week_8, names_to = "week", values_to = "value") %>% 
+  mutate(
+    week = recode(
+      week,
+      "week_1" = "1",
+      "week_2" = "2",
+      "week_3" = "3",
+      "week_4" = "4",
+      "week_5" = "5",
+      "week_6" = "6",
+      "week_7" = "7",
+      "week_8" = "8"
+    )
+  ) %>% 
   ggplot(aes(x = week, y = value, group = id, color = id)) +
   geom_line() +
   facet_grid(. ~ group) +
@@ -94,4 +107,44 @@ knitr::include_graphics("spaghetti_plot.png")
 
 ### Problem 3
 
+## Loading Iris Dataset
+
+```{r}
+set.seed(10)
+
+iris_with_missing = iris %>% 
+  map_df(~replace(.x, sample(1:150, 20), NA)) %>%
+  mutate(Species = as.character(Species))
+```
+
+## Function to Fill in Missing Values
+
+```{r}
+missing_fill_func = function(x) {
+  
+  if(is.numeric(x)) {
+    
+    x = ifelse(is.na(x), mean(x, na.rm = TRUE), x)
+    
+    }
+  
+  if(is.character(x)) {
+    
+    x = ifelse(is.na(x), "virginica", x)
+    
+  }
+  
+  return(x)
+  
+}
+```
+
+```{r}
+missing_fill_func(iris_with_missing$Sepal.Length)
+
+iris_with_missing %>% 
+  mutate(
+    Sepal.Length = map_dbl(Sepal.Length, missing_fill_func)
+    )
+```
 
