--- a/p8105_hw5_mjn2142.md
+++ b/p8105_hw5_mjn2142.md
@@ -72,6 +72,19 @@ tidied_nest_data = nest_long_study_data %>%
 spaghetti_plot = tidied_nest_data %>% 
   unnest(data) %>% 
   pivot_longer(week_1:week_8, names_to = "week", values_to = "value") %>% 
+  mutate(
+    week = recode(
+      week,
+      "week_1" = "1",
+      "week_2" = "2",
+      "week_3" = "3",
+      "week_4" = "4",
+      "week_5" = "5",
+      "week_6" = "6",
+      "week_7" = "7",
+      "week_8" = "8"
+    )
+  ) %>% 
   ggplot(aes(x = week, y = value, group = id, color = id)) +
   geom_line() +
   facet_grid(. ~ group) +
@@ -93,3 +106,81 @@ knitr::include_graphics("spaghetti_plot.png")
 <img src="spaghetti_plot.png" width="90%" />
 
 ### Problem 3
+
+## Loading Iris Dataset
+
+``` r
+set.seed(10)
+
+iris_with_missing = iris %>% 
+  map_df(~replace(.x, sample(1:150, 20), NA)) %>%
+  mutate(Species = as.character(Species))
+```
+
+## Function to Fill in Missing Values
+
+``` r
+missing_fill_func = function(x) {
+  
+  if(is.numeric(x)) {
+    
+    x = ifelse(is.na(x), mean(x, na.rm = TRUE), x)
+    
+    }
+  
+  if(is.character(x)) {
+    
+    x = ifelse(is.na(x), "virginica", x)
+    
+  }
+  
+  return(x)
+  
+}
+```
+
+``` r
+missing_fill_func(iris_with_missing$Sepal.Length)
+```
+
+    ##   [1] 5.100000 4.900000 4.700000 4.600000 5.000000 5.400000 5.819231 5.000000
+    ##   [9] 4.400000 4.900000 5.400000 4.800000 5.819231 4.300000 5.819231 5.700000
+    ##  [17] 5.400000 5.100000 5.700000 5.100000 5.400000 5.100000 4.600000 5.819231
+    ##  [25] 4.800000 5.000000 5.000000 5.200000 5.819231 4.700000 4.800000 5.400000
+    ##  [33] 5.200000 5.500000 4.900000 5.000000 5.500000 4.900000 4.400000 5.100000
+    ##  [41] 5.000000 4.500000 4.400000 5.000000 5.100000 4.800000 5.100000 4.600000
+    ##  [49] 5.300000 5.000000 7.000000 6.400000 6.900000 5.500000 6.500000 5.700000
+    ##  [57] 6.300000 4.900000 6.600000 5.200000 5.000000 5.900000 6.000000 6.100000
+    ##  [65] 5.600000 6.700000 5.600000 5.800000 6.200000 5.600000 5.900000 5.819231
+    ##  [73] 6.300000 5.819231 6.400000 6.600000 6.800000 6.700000 6.000000 5.700000
+    ##  [81] 5.500000 5.819231 5.800000 6.000000 5.400000 5.819231 6.700000 5.819231
+    ##  [89] 5.600000 5.500000 5.500000 5.819231 5.800000 5.000000 5.819231 5.700000
+    ##  [97] 5.700000 6.200000 5.100000 5.700000 6.300000 5.800000 7.100000 6.300000
+    ## [105] 6.500000 7.600000 4.900000 7.300000 6.700000 5.819231 6.500000 5.819231
+    ## [113] 6.800000 5.700000 5.800000 6.400000 6.500000 7.700000 7.700000 6.000000
+    ## [121] 5.819231 5.600000 7.700000 6.300000 6.700000 7.200000 6.200000 6.100000
+    ## [129] 6.400000 7.200000 7.400000 7.900000 6.400000 5.819231 6.100000 5.819231
+    ## [137] 5.819231 6.400000 6.000000 6.900000 6.700000 6.900000 5.819231 6.800000
+    ## [145] 6.700000 6.700000 6.300000 6.500000 5.819231 5.900000
+
+``` r
+iris_with_missing %>% 
+  mutate(
+    Sepal.Length = map_dbl(Sepal.Length, missing_fill_func)
+    )
+```
+
+    ## # A tibble: 150 × 5
+    ##    Sepal.Length Sepal.Width Petal.Length Petal.Width Species
+    ##           <dbl>       <dbl>        <dbl>       <dbl> <chr>  
+    ##  1          5.1         3.5          1.4         0.2 setosa 
+    ##  2          4.9         3            1.4         0.2 setosa 
+    ##  3          4.7         3.2          1.3         0.2 setosa 
+    ##  4          4.6         3.1          1.5        NA   setosa 
+    ##  5          5           3.6          1.4         0.2 setosa 
+    ##  6          5.4         3.9          1.7         0.4 setosa 
+    ##  7        NaN           3.4          1.4         0.3 setosa 
+    ##  8          5           3.4          1.5         0.2 setosa 
+    ##  9          4.4         2.9          1.4         0.2 setosa 
+    ## 10          4.9         3.1         NA           0.1 setosa 
+    ## # … with 140 more rows
