--- a/p8105_hw5_mjn2142.md
+++ b/p8105_hw5_mjn2142.md
@@ -16,19 +16,7 @@ long_study_data = as_tibble(list.files("./data"))
 ``` r
 long_study_output =
   map(.x = long_study_data, ~ read_csv(.x))
-```
 
-    ## Rows: 20 Columns: 8
-
-    ## ── Column specification ────────────────────────────────────────────────────────
-    ## Delimiter: ","
-    ## dbl (8): week_1, week_2, week_3, week_4, week_5, week_6, week_7, week_8
-
-    ## 
-    ## ℹ Use `spec()` to retrieve the full column specification for this data.
-    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
-
-``` r
 nest_long_study_data = long_study_output %>% 
   data.frame %>% 
   mutate(
@@ -45,7 +33,32 @@ nest_long_study_data = long_study_output %>%
     week_8 = value.week_8
   ) %>% 
   nest(data = week_1:week_8)
+
+knitr::kable(nest_long_study_data)
 ```
+
+| value       | data                                                |
+|:------------|:----------------------------------------------------|
+| con\_01.csv | 0.20, -1.31, 0.66, 1.96, 0.23, 1.09, 0.05, 1.94     |
+| con\_02.csv | 1.13, -0.88, 1.07, 0.17, -0.83, -0.31, 1.58, 0.44   |
+| con\_03.csv | 1.77, 3.11, 2.22, 3.26, 3.31, 0.89, 1.88, 1.01      |
+| con\_04.csv | 1.04, 3.66, 1.22, 2.33, 1.47, 2.70, 1.87, 1.66      |
+| con\_05.csv | 0.47, -0.58, -0.09, -1.37, -0.32, -2.17, 0.45, 0.48 |
+| con\_06.csv | 2.37, 2.50, 1.59, -0.16, 2.08, 3.07, 0.78, 2.35     |
+| con\_07.csv | 0.03, 1.21, 1.13, 0.64, 0.49, -0.12, -0.07, 0.46    |
+| con\_08.csv | -0.08, 1.42, 0.09, 0.36, 1.18, -1.16, 0.33, -0.44   |
+| con\_09.csv | 0.08, 1.24, 1.44, 0.41, 0.95, 2.75, 0.30, 0.03      |
+| con\_10.csv | 2.14, 1.15, 2.52, 3.44, 4.26, 0.97, 2.73, -0.53     |
+| exp\_01.csv | 3.05, 3.67, 4.84, 5.80, 6.33, 5.46, 6.38, 5.91      |
+| exp\_02.csv | -0.84, 2.63, 1.64, 2.58, 1.24, 2.32, 3.11, 3.78     |
+| exp\_03.csv | 2.15, 2.08, 1.82, 2.84, 3.36, 3.61, 3.37, 3.74      |
+| exp\_04.csv | -0.62, 2.54, 3.78, 2.73, 4.49, 5.82, 6.00, 6.49     |
+| exp\_05.csv | 0.70, 3.33, 5.34, 5.57, 6.90, 6.66, 6.24, 6.95      |
+| exp\_06.csv | 3.73, 4.08, 5.40, 6.41, 4.87, 6.09, 7.66, 5.83      |
+| exp\_07.csv | 1.18, 2.35, 1.23, 1.17, 2.02, 1.61, 3.13, 4.88      |
+| exp\_08.csv | 1.37, 1.43, 1.84, 3.60, 3.80, 4.72, 4.68, 5.70      |
+| exp\_09.csv | -0.40, 1.08, 2.66, 2.70, 2.80, 2.64, 3.51, 3.27     |
+| exp\_10.csv | 1.09, 2.80, 2.80, 4.30, 2.25, 6.57, 6.09, 4.64      |
 
 ## Tidying Data
 
@@ -64,7 +77,32 @@ tidied_nest_data = nest_long_study_data %>%
   ),
    id = substr(id, start = 1, stop = 2)
   )
+
+knitr::kable(tidied_nest_data)
 ```
+
+| group        | id  | data                                                |
+|:-------------|:----|:----------------------------------------------------|
+| control      | 01  | 0.20, -1.31, 0.66, 1.96, 0.23, 1.09, 0.05, 1.94     |
+| control      | 02  | 1.13, -0.88, 1.07, 0.17, -0.83, -0.31, 1.58, 0.44   |
+| control      | 03  | 1.77, 3.11, 2.22, 3.26, 3.31, 0.89, 1.88, 1.01      |
+| control      | 04  | 1.04, 3.66, 1.22, 2.33, 1.47, 2.70, 1.87, 1.66      |
+| control      | 05  | 0.47, -0.58, -0.09, -1.37, -0.32, -2.17, 0.45, 0.48 |
+| control      | 06  | 2.37, 2.50, 1.59, -0.16, 2.08, 3.07, 0.78, 2.35     |
+| control      | 07  | 0.03, 1.21, 1.13, 0.64, 0.49, -0.12, -0.07, 0.46    |
+| control      | 08  | -0.08, 1.42, 0.09, 0.36, 1.18, -1.16, 0.33, -0.44   |
+| control      | 09  | 0.08, 1.24, 1.44, 0.41, 0.95, 2.75, 0.30, 0.03      |
+| control      | 10  | 2.14, 1.15, 2.52, 3.44, 4.26, 0.97, 2.73, -0.53     |
+| experimental | 01  | 3.05, 3.67, 4.84, 5.80, 6.33, 5.46, 6.38, 5.91      |
+| experimental | 02  | -0.84, 2.63, 1.64, 2.58, 1.24, 2.32, 3.11, 3.78     |
+| experimental | 03  | 2.15, 2.08, 1.82, 2.84, 3.36, 3.61, 3.37, 3.74      |
+| experimental | 04  | -0.62, 2.54, 3.78, 2.73, 4.49, 5.82, 6.00, 6.49     |
+| experimental | 05  | 0.70, 3.33, 5.34, 5.57, 6.90, 6.66, 6.24, 6.95      |
+| experimental | 06  | 3.73, 4.08, 5.40, 6.41, 4.87, 6.09, 7.66, 5.83      |
+| experimental | 07  | 1.18, 2.35, 1.23, 1.17, 2.02, 1.61, 3.13, 4.88      |
+| experimental | 08  | 1.37, 1.43, 1.84, 3.60, 3.80, 4.72, 4.68, 5.70      |
+| experimental | 09  | -0.40, 1.08, 2.66, 2.70, 2.80, 2.64, 3.51, 3.27     |
+| experimental | 10  | 1.09, 2.80, 2.80, 4.30, 2.25, 6.57, 6.09, 4.64      |
 
 ## Spaghetti Plot
 
@@ -95,15 +133,20 @@ spaghetti_plot = tidied_nest_data %>%
   )
 
 ggsave("spaghetti_plot.png")
-```
-
-    ## Saving 6 x 3.6 in image
-
-``` r
 knitr::include_graphics("spaghetti_plot.png")
 ```
 
 <img src="spaghetti_plot.png" width="90%" />
+
+The panel showing controls spaghetti plots that do not demonstrate very
+much increase or decrease in values for every patient. The experimental
+panel, however, shows an increase in values across time for every single
+patient. The control group also has more instances of negative values,
+whereas the experimental group has some in the early weeks, but the
+steady increases eliminate these. Overall, the trends seen in these
+spaghetti plots show increases in only the experimental group, even
+though observed values in week 1 are similar, with the control group
+showing relatively steady values.
 
 ### Problem 3
 
@@ -140,47 +183,12 @@ missing_fill_func = function(x) {
 ```
 
 ``` r
-missing_fill_func(iris_with_missing$Sepal.Length)
+filled_in_df = iris_with_missing %>% map_df(missing_fill_func)
+
+number_missing_values =
+  sum(is.na(filled_in_df))
+
+print(number_missing_values)
 ```
 
-    ##   [1] 5.100000 4.900000 4.700000 4.600000 5.000000 5.400000 5.819231 5.000000
-    ##   [9] 4.400000 4.900000 5.400000 4.800000 5.819231 4.300000 5.819231 5.700000
-    ##  [17] 5.400000 5.100000 5.700000 5.100000 5.400000 5.100000 4.600000 5.819231
-    ##  [25] 4.800000 5.000000 5.000000 5.200000 5.819231 4.700000 4.800000 5.400000
-    ##  [33] 5.200000 5.500000 4.900000 5.000000 5.500000 4.900000 4.400000 5.100000
-    ##  [41] 5.000000 4.500000 4.400000 5.000000 5.100000 4.800000 5.100000 4.600000
-    ##  [49] 5.300000 5.000000 7.000000 6.400000 6.900000 5.500000 6.500000 5.700000
-    ##  [57] 6.300000 4.900000 6.600000 5.200000 5.000000 5.900000 6.000000 6.100000
-    ##  [65] 5.600000 6.700000 5.600000 5.800000 6.200000 5.600000 5.900000 5.819231
-    ##  [73] 6.300000 5.819231 6.400000 6.600000 6.800000 6.700000 6.000000 5.700000
-    ##  [81] 5.500000 5.819231 5.800000 6.000000 5.400000 5.819231 6.700000 5.819231
-    ##  [89] 5.600000 5.500000 5.500000 5.819231 5.800000 5.000000 5.819231 5.700000
-    ##  [97] 5.700000 6.200000 5.100000 5.700000 6.300000 5.800000 7.100000 6.300000
-    ## [105] 6.500000 7.600000 4.900000 7.300000 6.700000 5.819231 6.500000 5.819231
-    ## [113] 6.800000 5.700000 5.800000 6.400000 6.500000 7.700000 7.700000 6.000000
-    ## [121] 5.819231 5.600000 7.700000 6.300000 6.700000 7.200000 6.200000 6.100000
-    ## [129] 6.400000 7.200000 7.400000 7.900000 6.400000 5.819231 6.100000 5.819231
-    ## [137] 5.819231 6.400000 6.000000 6.900000 6.700000 6.900000 5.819231 6.800000
-    ## [145] 6.700000 6.700000 6.300000 6.500000 5.819231 5.900000
-
-``` r
-iris_with_missing %>% 
-  mutate(
-    Sepal.Length = map_dbl(Sepal.Length, missing_fill_func)
-    )
-```
-
-    ## # A tibble: 150 × 5
-    ##    Sepal.Length Sepal.Width Petal.Length Petal.Width Species
-    ##           <dbl>       <dbl>        <dbl>       <dbl> <chr>  
-    ##  1          5.1         3.5          1.4         0.2 setosa 
-    ##  2          4.9         3            1.4         0.2 setosa 
-    ##  3          4.7         3.2          1.3         0.2 setosa 
-    ##  4          4.6         3.1          1.5        NA   setosa 
-    ##  5          5           3.6          1.4         0.2 setosa 
-    ##  6          5.4         3.9          1.7         0.4 setosa 
-    ##  7        NaN           3.4          1.4         0.3 setosa 
-    ##  8          5           3.4          1.5         0.2 setosa 
-    ##  9          4.4         2.9          1.4         0.2 setosa 
-    ## 10          4.9         3.1         NA           0.1 setosa 
-    ## # … with 140 more rows
+    ## [1] 0
